--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -2,9 +2,11 @@
     <div>
         <h5 class="fw-bold mb-4">Dashboard</h5>
     </div>
+    <!-- loader -->
     <div *ngIf="isLoading" class="spinner-container d-flex justify-content-center align-items-center h-100 w-100">
         <mat-spinner [diameter]="80"></mat-spinner>
     </div>
+    <!-- /loader -->
     <div *ngIf="!isLoading">
         <div class="row">
             <div class="col-8">
