--- a/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
+++ b/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
@@ -35,7 +35,7 @@
 <!-- /main content -->
 
 <!-- dialog -->
-<ng-template #content>
+<!-- <ng-template #content>
     <form [formGroup]="feedbackForm">
         <mat-dialog-content>
             <div class="text-center">
@@ -53,10 +53,10 @@
                   <mat-error *ngIf="feedbackForm.get('productDescription')?.hasError('maxlength')">
                     Maximum 200 characters allowed.
                   </mat-error>
-            </mat-form-field>
+            </mat-form-field> -->
 
             <!-- /form -->
-        </mat-dialog-content>
+        <!-- </mat-dialog-content>
         <mat-dialog-actions class="d-flex border-top border-light">
             <button mat-flat-button class="bg-danger py-3 shadow-sm button-mh-45 me-2"
                 [mat-dialog-close]="true"><mat-icon>close</mat-icon>
@@ -68,6 +68,6 @@
                 </span></button>
         </mat-dialog-actions>
     </form>
-</ng-template>
+</ng-template> -->
 
 <!-- /dialog -->
