--- a/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
+++ b/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
@@ -98,7 +98,7 @@
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Action</th>
           <td mat-cell *matCellDef="let element">
             <div>
-              <button (click)="openDialog(element._id) " [disabled]="!element.isPicked"
+              <button (click)="openDialog(element._id) " [disabled]="element.isPicked==='pending'"
                 class="border border-light p-2 shadow-sm table-action-buttons cursor-pointer ">
                 <svg width="16" height="16" viewBox="0 0 12.375 13.75" xmlns="http://www.w3.org/2000/svg">
                   <path
